# KauriPandit

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: board.py  example.py
tests/: test_board.py  test_example.py
